[package]
name = "pburn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bollard = "0.11"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0.108", features = [] }
mongodb = { version = "2.8.0", features = ["tokio-sync"] }
rumqttc = { version = "0.23.0", features = ["default"]}
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }


